src/objects/Case_Milestone_History__c.object
<CustomObject>
    <description>Case Milestone History</description>
    <fields>
        <fullName>Case_Milestone_Id__c</fullName>
        <description>Case Milestone record Id</description>
        <inlineHelpText>Case Milestone record Id</inlineHelpText>
        <label>Case Milestone Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case associated with this case milestone history</description>
        <inlineHelpText>Case associated with this case milestone history</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Milestone History</relationshipLabel>
        <relationshipName>Case_Milestone_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <description>Milestone Name</description>
        <inlineHelpText>Milestone Name</inlineHelpText>
        <label>Milestone Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Milestone History</label>
    <nameField>
        <label>Case Milestone Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Milestone History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>